Removed age_in_days column, added birthday column on Pets. Updated in views, controller, etc. Added bootstrap-datepicker for selecting birthday.

--- a/app/views/pets/_form.html.haml
+++ b/app/views/pets/_form.html.haml
@@ -12,9 +12,9 @@
     %br/
     = f.text_field :name
   .field
-    = f.label :age_in_days
+    = f.label :birthday
     %br/
-    = f.text_field :age_in_days
+    = f.text_field :birthday, :data => { :provide => "datepicker" }
   .field
     = f.label :gender_id
     %br/
