--- a/app/views/pets/index.html.haml
+++ b/app/views/pets/index.html.haml
@@ -12,7 +12,7 @@
     - @pets.each do |pet|
       %tr
         %td= pet.name
-        %td= pet.age_in_days
+        %td= pet.birthday
         %td= pet.gender_id
         %td= pet.image_id
         %td= link_to 'Show', pet
