--- a/app/views/pets/show.html.haml
+++ b/app/views/pets/show.html.haml
@@ -3,8 +3,8 @@
   %strong Name:
   = @pet.name
 %p
-  %strong Age in days:
-  = @pet.age_in_days
+  %strong Birthday:
+  = @pet.birthday
 %p
   %strong Gender:
   = @pet.gender.name
