--- a/app/views/pets/_form.html.haml
+++ b/app/views/pets/_form.html.haml
@@ -20,6 +20,10 @@
     %br/
     = f.collection_select(:gender_id, Gender.all, :id, :name)
   .field
+    = f.label :species_id
+    %br/
+    = f.collection_select(:species_id, Species.all, :id, :name)
+  .field
     = f.label :image_id
     %br/
     = f.number_field :image_id
