--- a/app/views/pets/index.html.haml
+++ b/app/views/pets/index.html.haml
@@ -17,7 +17,8 @@
         %td= pet.species.try(:name)
         %td= pet.image_id
         %td= link_to 'Show', pet
-        %td= link_to 'Edit', edit_pet_path(pet)
-        %td= link_to 'Destroy', pet, method: :delete, data: { confirm: 'Are you sure?' }
+        - if pet.user_verified?(current_user)
+          %td= link_to 'Edit', edit_pet_path(pet)
+          %td= link_to 'Destroy', pet, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
 = link_to 'New Pet', new_pet_path
