--- a/app/views/pets/show.html.haml
+++ b/app/views/pets/show.html.haml
@@ -14,6 +14,7 @@
 %p
   %strong Image:
   = @pet.image_id
-= link_to 'Edit', edit_pet_path(@pet)
-|
+- if @pet.user_verified?(current_user)
+  = link_to 'Edit', edit_pet_path(@pet)
+  |
 =link_to 'Back', pets_path
