Fixed bug with how date format was being passed along (months and days were swapped).

--- a/app/views/pets/_form.html.haml
+++ b/app/views/pets/_form.html.haml
@@ -14,7 +14,7 @@
   .field
     = f.label :birthday
     %br/
-    = f.text_field :birthday, :data => { :provide => "datepicker" }
+    = f.text_field :birthday, :data => { :provide => "datepicker", 'date-format' => 'yyyy-mm-dd' }, :class => "datepicker"
   .field
     = f.label :gender_id
     %br/
