--- a/app/assets/stylesheets/pets.scss
+++ b/app/assets/stylesheets/pets.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Pets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.img-responsive {
+	margin: 0 auto;
+}
+
+.panel-body {
+	padding: 0;
+}
