--- a/app/views/pets/index.html.haml
+++ b/app/views/pets/index.html.haml
@@ -1,24 +1,34 @@
-%p#notice= notice
-%h1 Listing Pets
-%table
-  %thead
-    %tr
-      %th Name
-      %th Age
-      %th Gender
-      %th Image
-      %th{:colspan => "3"}
-  %tbody
-    - @pets.each do |pet|
-      %tr
-        %td= pet.name
-        %td= age(pet)
-        %td= pet.gender.try(:name)
-        %td= pet.species.try(:name)
-        %td= image_tag pet.image.medium.url
-        %td= link_to 'Show', pet
-        - if pet.user_verified?(current_user)
-          %td= link_to 'Edit', edit_pet_path(pet)
-          %td= link_to 'Destroy', pet, method: :delete, data: { confirm: 'Are you sure?' }
-%br/
+%h1 Pets
+/ %table
+/   %thead
+/     %tr
+/       %th Name
+/       %th Age
+/       %th Gender
+/       %th Image
+/       %th{:colspan => "3"}
+/   %tbody
+- @pets.each_slice(3) do |pets|
+  .row
+    - pets.each do |pet|
+      .col-md-4
+        .panel.panel-default
+          .panel-heading
+            %h3.panel-title
+              = link_to pet.name, pet
+              - if pet.user_verified?(current_user)
+                %span.label.label-success Your Pet!
+          .panel-body
+            = image_tag pet.image.medium.url, :class => "img-responsive"
+/       %tr
+/         %td= pet.name
+/         %td= age(pet)
+/         %td= pet.gender.try(:name)
+/         %td= pet.species.try(:name)
+/         %td= image_tag pet.image.medium.url
+/         %td= link_to 'Show', pet
+/         - if pet.user_verified?(current_user)
+/           %td= link_to 'Edit', edit_pet_path(pet)
+/           %td= link_to 'Destroy', pet, method: :delete, data: { confirm: 'Are you sure?' }
+/ %br/
 = link_to 'New Pet', new_pet_path
