--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,8 @@
 @import "bootstrap";
 
 // Bootstrap body padding for fixed navbar
-body { padding-top: 60px; }
+body { padding-top: 70px; }
+.navbar-fixed-top { z-index: 9; } // so it doesn't go over datepicker
 
 // And finally bootswatch style itself
 @import "bootswatch/flatly/bootswatch";
