--- a/app/views/pets/edit.html.haml
+++ b/app/views/pets/edit.html.haml
@@ -1,5 +1,4 @@
-%h1 Editing Pet
+%h1 Edit Pet Details
 = render 'form'
 = link_to 'Show', @pet
-|
-= link_to 'Back', pets_path
+/= link_to 'Back', pets_path
