--- a/app/views/pets/index.html.haml
+++ b/app/views/pets/index.html.haml
@@ -1,4 +1,6 @@
-%h1 Pets
+%h1 
+  Pets
+  = link_to 'New Pet', new_pet_path, :class => "btn btn-success pull-right"
 / %table
 /   %thead
 /     %tr
@@ -17,7 +19,7 @@
             %h3.panel-title
               = link_to pet.name, pet
               - if pet.user_verified?(current_user)
-                %span.label.label-success Your Pet!
+                %span.label.label-warning Your Pet!
           .panel-body
             = image_tag pet.image.medium.url, :class => "img-responsive"
 /       %tr
@@ -31,4 +33,4 @@
 /           %td= link_to 'Edit', edit_pet_path(pet)
 /           %td= link_to 'Destroy', pet, method: :delete, data: { confirm: 'Are you sure?' }
 / %br/
-= link_to 'New Pet', new_pet_path
+/= link_to 'New Pet', new_pet_path
