--- a/app/views/pets/index.html.haml
+++ b/app/views/pets/index.html.haml
@@ -1,15 +1,7 @@
 %h1 
   Pets
   = link_to 'New Pet', new_pet_path, :class => "btn btn-success pull-right"
-/ %table
-/   %thead
-/     %tr
-/       %th Name
-/       %th Age
-/       %th Gender
-/       %th Image
-/       %th{:colspan => "3"}
-/   %tbody
+
 - @pets.each_slice(3) do |pets|
   .row
     - pets.each do |pet|
@@ -19,9 +11,9 @@
             %h3.panel-title
               = link_to pet.name, pet
               - if pet.user_verified?(current_user)
-                %span.label.label-warning Your Pet!
+                %span.label.label-warning.pull-right Your Pet!
           .panel-body
-            = image_tag pet.image.medium.url, :class => "img-responsive"
+            = link_to image_tag(pet.image.medium.url, :class => "img-responsive"), pet
 /       %tr
 /         %td= pet.name
 /         %td= age(pet)
