--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    #navbar-main.navbar.navbar-default.navbar-fixed-top
+    %nav#navbar-main.navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
           =link_to "Petbook", root_url, :class => "navbar-brand"
