--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    %nav#navbar-main.navbar.navbar-default.navbar-fixed-top
+    %nav.navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
           =link_to "Petbook", root_url, :class => "navbar-brand"
@@ -15,19 +15,20 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-        #navbar-main.navbar-collapse.collapse.in
+        #navbar-main.navbar-collapse.collapse
           %ul.nav.navbar-nav.navbar-right
             - if user_signed_in?
-              %li
-                %p.navbar-text
-                  Logged in as
-                  %strong= current_user.email
               %li
                 = link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'
             - else
               %li= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'
               %li= link_to "Login", new_user_session_path, :class => 'navbar-link'
     .container
+      - if user_signed_in?
+        #logged_in_as
+          %p.pull-right
+            Logged in as
+            %strong= current_user.email
       - if notice
         .alert.alert-success
           %p= notice
